# masala_public

./: .gitignore  .gitmodules  Doxyfile.src  NOTES.txt  README.md  buildme.sh  delete_build.sh
cmake/: CMakeLists.txt  build.cmake  clean.sh  compiler.cmake  copy_headers.py  generate_cmake_build.py
code_templates/: copy_headers.py  generate_cmake_build.py  generate_library_api.py  masala_fxns.py
code_templates/api_templates/: MasalaClassAPI.cc  MasalaClassAPI.fwd.hh  MasalaClassAPI.hh  MasalaDataRepresentationCreator.cc  MasalaDataRepresentationCreator.fwd.hh  MasalaDataRepresentationCreator.hh  MasalaDerivedClassAPI.cc  MasalaDerivedClassAPI.hh  MasalaEngineCreator.cc  MasalaEngineCreator.fwd.hh  MasalaEngineCreator.hh  MasalaFileInterpreterCreator.cc  MasalaFileInterpreterCreator.fwd.hh  MasalaFileInterpreterCreator.hh  MasalaLightWeightClassAPI.cc  MasalaLightWeightClassAPI.fwd.hh  MasalaLightWeightClassAPI.hh  MasalaLightWeightDerivedClassAPI.cc  MasalaLightWeightDerivedClassAPI.hh  MasalaPluginCreator.cc  MasalaPluginCreator.fwd.hh  MasalaPluginCreator.hh  register_plugins.cc  register_plugins.hh
code_templates/licences/: AGPL.template  GPL3.template  MIT.template
database/chemistry/elements/: elements.json
src/: masala_core_library.md
src/base/: MasalaNoAPIObject.cc  MasalaNoAPIObject.fwd.hh  MasalaNoAPIObject.hh  MasalaObject.cc  MasalaObject.fwd.hh  MasalaObject.hh  MasalaObjectAPI.cc  MasalaObjectAPI.fwd.hh  MasalaObjectAPI.hh  hash_types.hh  types.hh
src/base/api/: MasalaFunctionAnnotation.fwd.hh  MasalaFunctionAnnotation.hh  MasalaObjectAPIDefinition.cc  MasalaObjectAPIDefinition.fwd.hh  MasalaObjectAPIDefinition.hh  MasalaObjectAPIDefinition.tmpl.hh  names_from_types.cc  names_from_types.tmpl.hh
src/base/api/constructor/: MasalaObjectAPIConstructorDefinition.cc  MasalaObjectAPIConstructorDefinition.fwd.hh  MasalaObjectAPIConstructorDefinition.hh  MasalaObjectAPIConstructorDefinition_EightInput.fwd.hh  MasalaObjectAPIConstructorDefinition_EightInput.tmpl.hh  MasalaObjectAPIConstructorDefinition_FiveInput.fwd.hh  MasalaObjectAPIConstructorDefinition_FiveInput.tmpl.hh  MasalaObjectAPIConstructorDefinition_FourInput.fwd.hh  MasalaObjectAPIConstructorDefinition_FourInput.tmpl.hh  MasalaObjectAPIConstructorDefinition_NineInput.fwd.hh  MasalaObjectAPIConstructorDefinition_NineInput.tmpl.hh  MasalaObjectAPIConstructorDefinition_OneInput.fwd.hh  MasalaObjectAPIConstructorDefinition_OneInput.tmpl.hh  MasalaObjectAPIConstructorDefinition_SevenInput.fwd.hh  MasalaObjectAPIConstructorDefinition_SevenInput.tmpl.hh  MasalaObjectAPIConstructorDefinition_SixInput.fwd.hh  MasalaObjectAPIConstructorDefinition_SixInput.tmpl.hh  MasalaObjectAPIConstructorDefinition_TenInput.fwd.hh  MasalaObjectAPIConstructorDefinition_TenInput.tmpl.hh  MasalaObjectAPIConstructorDefinition_ThreeInput.fwd.hh  MasalaObjectAPIConstructorDefinition_ThreeInput.tmpl.hh  MasalaObjectAPIConstructorDefinition_TwoInput.fwd.hh  MasalaObjectAPIConstructorDefinition_TwoInput.tmpl.hh  MasalaObjectAPIConstructorDefinition_ZeroInput.fwd.hh  MasalaObjectAPIConstructorDefinition_ZeroInput.tmpl.hh  (+1 more)
src/base/enums/: AtomHybridizationStateEnum.cc  AtomHybridizationStateEnum.fwd.hh  AtomHybridizationStateEnum.hh  ChemicalBondTypeEnum.cc  ChemicalBondTypeEnum.fwd.hh  ChemicalBondTypeEnum.hh
src/base/error/: ErrorHandling.cc  ErrorHandling.fwd.hh  ErrorHandling.hh
src/base_api/: MasalaObjectAPI.fwd.hh  MasalaObjectAPI.hh
src/core/: link_dependencies.txt  types.hh
src/core/api/: generate_api_classes.cc  generate_api_classes.hh
src/core/chemistry/: AtomCoordinateRepresentation.fwd.hh  AtomCoordinateRepresentation.hh  AtomInstance.cc  AtomInstance.fwd.hh  AtomInstance.hh  MolecularGeometry.cc  MolecularGeometry.fwd.hh  MolecularGeometry.hh  MolecularGeometryConfiguration.cc  MolecularGeometryConfiguration.fwd.hh  MolecularGeometryConfiguration.hh  Molecule.cc  Molecule.fwd.hh  Molecule.hh  Molecules.cc  Molecules.fwd.hh  Molecules.hh  MoleculesCollection.cc  MoleculesCollection.fwd.hh  MoleculesCollection.hh  MoleculesConfiguration.cc  MoleculesConfiguration.fwd.hh  MoleculesConfiguration.hh
src/core/core_apps/: generate_core_api.cc
src/core/engine/: MasalaDataRepresentationBase.fwd.hh  MasalaDataRepresentationBase.hh  MasalaEngineBase.fwd.hh  MasalaEngineBase.hh
src/core/molecular_system/: MolecularSystem.cc  MolecularSystem.fwd.hh  MolecularSystem.hh
src/core/pose/: MolecularSystem.cc  MolecularSystem.fwd.hh  MolecularSystem.hh  Pose.cc  Pose.fwd.hh  Pose.hh
src/core/scoring/: ScoringTerm.cc  ScoringTerm.fwd.hh  ScoringTerm.hh  ScoringTermAdditionalInput.cc  ScoringTermAdditionalInput.fwd.hh  ScoringTermAdditionalInput.hh  ScoringTermAdditionalOutput.cc  ScoringTermAdditionalOutput.fwd.hh  ScoringTermAdditionalOutput.hh  ScoringTermCache.cc  ScoringTermCache.fwd.hh  ScoringTermCache.hh
src/core/selection/: Selection.fwd.hh  Selection.hh
src/core/utility/: binary_in_ascii_util.cc  binary_in_ascii_util.hh
src/core_api/: link_dependencies.txt  types.hh
src/core_api/utility/: binary_in_ascii_util.cc  binary_in_ascii_util.hh
src/numeric/: link_dependencies.txt  types.hh
src/numeric/api/: generate_api_classes.cc  generate_api_classes.hh
src/numeric/numeric_apps/: generate_numeric_api.cc
src/numeric/optimization/: OptimizationProblem.cc  OptimizationProblem.fwd.hh  OptimizationProblem.hh  OptimizationProblems.cc  OptimizationProblems.fwd.hh  OptimizationProblems.hh  OptimizationSolution.cc  OptimizationSolution.fwd.hh  OptimizationSolution.hh  OptimizationSolutions.cc  OptimizationSolutions.fwd.hh  OptimizationSolutions.hh
src/numeric/utility/: angle_util.hh  cxx_17_compatibility_util.hh
src/numeric_api/: types.hh
src/numeric_api/utility/: cxx_17_compatibility_util_api.hh
src/utility/container/: container_util.tmpl.hh
src/utility/string/: string_manipulation.cc  string_manipulation.hh  string_parsing.tmpl.hh
tests/unit/base/: base_tests.cc
tests/unit/core/: core_tests.cc  link_dependencies.txt
tests/unit/numeric/: link_dependencies.txt  numeric_tests.cc
(+627 files in other folders)
